[package]
name = "timer-util"
version = "0.1.0"
edition = "2021"

license-file = "LICENSE"
readme = "README.md"

include = [
    "LICENSE", "Cargo.toml", "README.md", "src/*.rs", "examples/*.rs"
]
[dependencies]
anyhow = "1.0"
log = { version = "0.4" }
time = {version = "0.3", features = ["local-offset"]}


[dev-dependencies]
tokio = {version ="1.18", features = ["rt-multi-thread", "macros", "time"]}
