[package]
name = "timer-util"
version = "0.2.0"
edition = "2021"
description = "a simple tool to compute time: easy to config, and easy to use."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/jm-observer/timer-util"
documentation = "https://docs.rs/timer-util/latest/timer-util/"
homepage = "https://docs.rs/timer-util/latest/timer-util/"

include = [
    "LICENSE", "Cargo.toml", "README.md", "src/*.rs", "examples/*.rs"
]
[dependencies]
anyhow = "1.0"
log = { version = "0.4" }
#time = {version = "0.3", features = ["local-offset", "formatting", "macros"]}
chrono = "0.4"

[dev-dependencies]
tokio = {version ="1.18", features = ["rt-multi-thread", "macros", "time"]}
custom-utils = {version ="0.5.0", default-features = false, features = ["logger"]}
