[package]
name = "timer-util"
version = "0.3.2"
edition = "2021"
description = "a simple tool to compute time: easy to config, and easy to use."
license-file = "LICENSE"
readme = "README.md"
keywords = ["timer"]
repository = "https://github.com/jm-observer/timer-util"
documentation = "https://docs.rs/timer-util/latest/timer-util/"
homepage = "https://docs.rs/timer-util/latest/timer-util/"

include = [
    "LICENSE", "Cargo.toml", "README.md", "src/*.rs", "examples/*.rs"
]
[dependencies]
anyhow = "1.0"
log = { version = "0.4" }
chrono = "0.4"

[dev-dependencies]
tokio = {version ="1.18", features = ["rt-multi-thread", "macros", "time"]}
custom-utils = {version ="0.8.1", features = ["dev"] }
